--- a/project.html
+++ b/project.html
@@ -40,102 +40,107 @@
                   <source src="media/vid/Revista Eco.mp4" type="video/mp4">
                 </video>
             </div>
-            <img src="media/img/layout.avif" class="w-25 h-50 position-absolute bottom-0 end-0 p-5 d-none d-md-block" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="300" data-aos-duration="400" data-aos-easing="ease-in-out">
+            <img src="media/img/collage banda test 3.png" class="w-25 h-auto position-absolute bottom-0 end-0 p-5 d-none d-md-block" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="300" data-aos-duration="400" data-aos-easing="ease-in-out">
         </div>
     </section>
 
     <Section class="container my-5 overflow-hidden">
         <div class="row flex-md-row flex-column-reverse">
             <div class="col-12 col-md-6">
-                <img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
+                <video class="img-fluid" autoplay muted loop data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out"> 
+                    <source src="media/vid/Comp 1.mp4" type="video/mp4"> 
+                </video> 
             </div>
             <div class="col-12 col-md-6">
-                <h2 data-aos="fade-left" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem Ipsum</h2>
-                <p data-aos="fade-left" data-aos-offset="100" data-aos-delay="200" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis reiciendis magni minus! Eveniet sed fugiat ipsum placeat possimus odio accusantium aliquam deserunt? Voluptatibus voluptates assumenda, id necessitatibus illum magnam delectus.</p>
+                <h2 data-aos="fade-left" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">Eco - Jazz</h2>
+                <p data-aos="fade-left" data-aos-offset="100" data-aos-delay="200" data-aos-duration="400" data-aos-easing="ease-in-out">Eco es una revista musical que se enfoca en un género específico en cada edición. En este caso, la revista está dedicada al Jazz. Explora aspectos como los orígenes de este género y su influencia en diferentes países. Además, se dirige a un público joven de 20 a 35 años interesado en cultura, arte, diseño y, especialmente, música.</p>
             </div>
         </div>
     </Section>
 
-    <section class="container text-center overflow-hidden">
-        <div class="row justify-content-center">
+    <section class="container text-center overflow-hidden vh-50 justify-content-center d-flex align-items-center">
+        <div class="row justify-content-center ">
             <div class="col-6">
-                <p data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ex recusandae magni hic quia fuga deleniti sed quos sit? Ex, nam quo! Distinctio odio cupiditate cumque repellendus earum necessitatibus nihil illum.</p>
+                <p class="h4" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">La paleta de color es amplia dándonos mucha versatilidad a la hora de diseñar la revista, normalmente en cada sección de la misma es predominante un color de la paleta. Son colores saturados y con mucho contraste de tonos y luces entre ellos.</p>
             </div>
         </div>
     </section>
 
     <Section class="container my-3 overflow-hidden">
         <div class="row">
-            <div class="col-12 col-md-6 offset-md-6"><img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out"></div>
+            <div class="col-12 col-md-6">
+                <img src="media/img/Indice-eco.jpg" class="img-fluid mb-4" alt="" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
+            </div>
+            <div class="col-12 col-md-6 justify-content-center d-flex align-items-center">
+                <img src="media/img/japon 3.png" class="img-fluid" alt="" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
+            </div>
+            
             <div class="col-12 col-md-6">
                 <h2 data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem ipsum</h2>
-                <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa, laudantium? Veniam neque ratione omnis dolorum tempore ex cupiditate quia qui mollitia excepturi dolore voluptatem sunt explicabo repellat, nesciunt reprehenderit architecto!</p>
+                <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">A la hora de elegir las tipografías opte por elegir tres muy bien diferenciadas. Las tres tiene una muy buena relación de la altura X por lo que funcionan bien entre ellas.</p>
+                    <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out"><strong>Mashie:</strong> su propósito principal son los títulos y en especial los gigantes ya que es una tipografía muy bold por lo que tiene mucha potencia junto al uso de colores planos. Utilizada también para realizar el logo de la revista y la portada.
+                </p>
+                <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out"><strong>Switer:</strong>Una tipografía con una muy buena legibilidad para utilizarla en los textos de la revista, es  simple y atemporal. <strong>Editorial Old:</strong> Una serifa para contrastar con la simpleza de la sanserif de Switzer, utilizada para citas y textos especiales.</p>
+            
+                <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">En general en la revista hay tres tratamientos a las imágenes, El uso normal de ellas utilizándolas sin ninguna modificación, el uso del color en la que las modificamos para que solo aparezcan en un color para darle homogeneidad a la sección a la que pertenezca y por ultimo el del color con el efecto de semitono.</p>
             </div>
-            <div class="col-12 col-md-6"><img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out"></div>
+            <div class="col-12 col-md-6">
+                <img src="media/img/frase-eco.jpg" class="img-fluid" alt="" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
+            </div>
         </div>
     </Section>
 
-    <section class="container my-3 overflow-hidden">
+    <section class="container-fluid my-3 overflow-hidden">
         <div class="row justify-content-md-center">
             <div class="col-12 col-md-6">
-                <img src="media/img/layout.avif" class="img-fluid" alt="">
+                <img src="media/img/mockup-eco2.png" class="img-fluid" alt="">
             </div>
             <div class="col-12 col-md-6">
-                <img src="media/img/layout.avif" class="img-fluid" alt="">
-            </div>
-        </div>
-    </section>
-
-    <section class="container-fluid-g0 my-3 overflow-hidden">
-        <div class="row justify-content-md-start">
-            <div class="col-12 col-md-8">
-                <div class="row">
-                    <img src="media/img/layout horizontal.jpg" class=".img-horizontal mb-3 " alt="" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
-                    <img src="media/img/layout horizontal.jpg" class=".img-horizontal mb-3 " alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="100" data-aos-duration="400" data-aos-easing="ease-in-out">
-                </div>
-            </div>
-            <div class="col-12 col-md-4">
-                <div class="row">
-                    <img src="media/img/layout.avif" class="img-fluid mb-3" alt="" data-aos="fade-right" data-aos-offset="100" data-aos-delay="150" data-aos-duration="400" data-aos-easing="ease-in-out">
-                    <img src="media/img/layout.avif" class="img-fluid mb-3" alt="" data-aos="fade-left" data-aos-offset="100" data-aos-delay="200" data-aos-duration="400" data-aos-easing="ease-in-out">
-                </div>
+                <img src="media/img/Mockup-eco.png" class="img-fluid" alt="">
             </div>
         </div>
     </section>
 
     <section class="container my-3 overflow-hidden">
         <div class="row">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-8">
                 <div class="row">
-                    <h3 data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut quam neque reiciendis dolorem. Dicta labore fugit quidem veniam aut qui facilis deserunt quibusdam itaque earum! Esse accusantium sit ad quae?</h3>
+                    <h3 class="h3 mb-5" data-aos="fade-down" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">La cuadricula utilizada es de 8x5 con un medianil de 5mm, este grid nos da mucha libertad a la hora de diseñar a la vez que nos genera un orden y armonía entre los elementos. Los márgenes utilizados son de 10mm en la parte exterior y superior, 15mm en el interior y 20mm en la parte inferior. estos márgenes nos aportan dinamismo al diseño.</h3>
                     <div class="col-12 col-md-6">
-                        <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae harum error blanditiis nobis eius necessitatibus ut modi culpa tempore ipsa impedit quibusdam expedita maxime, doloremque temporibus illum cumque assumenda consequatur.</p>
+                        <h2 class="h2" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Portadas</h2>
+                        <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">La portadas utilizan el logo repetido de varias maneras para generar una mascara hacia la imagen principal a la vez que dejan el nombre de la misma por toda la portada, lo mismo pasa con el genero que se tratara en la revista como el Jazz, Funk y Techno. Al igual que el volumen que representa el volumen de el genero.</p>
+                            <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">El color cambia dependiendo del genero, el color de la portada es mayormente usado también en el interior. El color usado en masas tan grandes también sirve como reclamo para el comprador.</p>
                     </div>
                     <div class="col-12 col-md-6">
-                        <p data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus non fugiat, voluptates odio molestiae, maxime exercitationem illum eum aspernatur laborum fuga tempora voluptatem illo praesentium quaerat minus id porro hic!</p>
+                        <h2 class="h2" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Contraportada</h2>
+                        <p data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">La contracubieta sigue con el color de la cubierta, dejando una masa en blanco para añadir el logotipo de la revista e información acerca de la revista eco y de esa publicación en especifico detallando de que genero tratara asi como las secciones que la componen.
+
+                            En la esquina inferior izquierda esta el código de barras convidando con el rectángulo blanco con negro, en este también pone el precio de la misma.</p>
                     </div>
                 </div>
             </div>
-            <div class="col-12 col-md-6">
-                <img src="media/img/layout.avif" class="img-fluid" alt="" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="400" data-aos-easing="ease-in-out">
+            <div class="col-12 col-md-4">
+                <video class="img-fluid" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
+                    <source src="media/vid/Timeline 1.mp4" type="video/mp4"> 
+                  </video> 
             </div>
         </div>
     </section>
 
-    <section class="container my-3 overflow-hidden">
+    <section class="container-fluid my-3 overflow-hidden">
         <div class="row g-3">
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
-            <div class="col-6 col-md-3"><img src="media/img/layout.avif" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/7.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/8.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/11.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/12.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/13.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/15.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/16.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/17.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/18.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/21.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/22.png" class="img-fluid" alt=""></div>
+            <div class="col-6 col-md-3 gallery"><img src="media/img/23.png" class="img-fluid" alt=""></div>
         </div>
     </section>
 
