--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@
               </div>
             </div>
         </a>
-          
         </div>
         <div class="col-12 col-md-8 col-lg-3">
           <div class="row" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
@@ -191,7 +190,7 @@
     <section class="container-fluid overflow-hidden">
       <div class="row justify-content-center position-relative">
         <a href="project.html">
-        <video class="img-fluid" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
+        <video class="w-100 h-auto" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
           <source src="media/vid/Revista Eco.mp4" type="video/mp4"> 
         </video> 
       </a>
