--- a/about.html
+++ b/about.html
@@ -31,14 +31,12 @@
       </div>
     </nav>
 
-    <section class="container justify-content-center overflow-hidden vh-100 d-flex align-items-center flex-column">
+    <section class="container justify-content-center overflow-hidden d-flex align-items-center flex-column">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
         <div class="row">
-          <div class="scroll-video-container">
-            <video class="scroll-video" width="100%" height="auto" muted>
-              <source src="media/vid/Revista Eco.mp4" type="video/mp4">
+            <video class="w-100 h-auto" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
+              <source src="media/vid/video moneda 2.mp4" type="video/mp4"> 
             </video>
-        </div>
         </div>
         <div class="row text-center"><h1 class="display-1">Canto</h1></div>
     </section>
