--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       </div>
     </nav>
 
-    <section class="container justify-content-center overflow-hidden d-flex align-items-center flex-column">
+    <section class="container mb-5 justify-content-center overflow-hidden d-flex align-items-center flex-column">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
         <div class="row">
             <video class="w-100 h-auto" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
@@ -44,16 +44,16 @@
     <section class="container">
         <div class="row">
             <div class="col-10 col-md-4">
-                <img src="media/img/layout.avif" class="img-fluid" alt="">
+              <div class="flip-container g-0 align-middle">
+                <div class="flipper">
+                  <img src="media/img/moneda-1.png" class="front" alt="Logo principal">
+                  <img src="media/img/moneda-2.png" class="back" alt="Logo reverso">
+                </div>
+            </div>
             </div>
             <div class="col-12 col-md-8">
                 <h2>Lorem Ipsum</h2>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat non, expedita ducimus quisquam eum, laboriosam doloribus, voluptatum inventore explicabo sed eos odit deserunt ab asperiores commodi sint necessitatibus ratione.</p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-10 col-md-5">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit ipsam voluptatum aspernatur provident. Maiores voluptas quas, ipsam voluptates maxime quo tempore aspernatur incidunt sed beatae at adipisci minima itaque velit.</p>
             </div>
         </div>
         <div class="row">
@@ -71,8 +71,7 @@
 
     <section class="container-fluid-g0">
         <div class="accordion accordion-flush" id="accordionFlushExample">
-
-                <div class="accordion-item">
+            <div class="accordion-item">
               <h2 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
                   Lowkey Gaspar
