--- a/project.html
+++ b/project.html
@@ -127,6 +127,44 @@
         </div>
     </section>
 
+    <section class="footer"> 
+<footer class="footer-enhanced py-5 mt-5" data-aos="fade-up">
+  <div class="container">
+    <div class="row gy-4">
+
+      <div class="col-md-4">
+        <h5 class="text-uppercase mb-3">El Canto</h5>
+        <p class="small opacity-75">
+          Un proyecto donde dos perfiles creativos opuestos se encuentran para crear algo único.
+        </p>
+      </div>
+
+      <div class="col-md-4">
+        <h6 class="text-uppercase mb-3">Enlaces</h6>
+        <ul class="list-unstyled small">
+          <li><a href="index.html" class="footer-link">Inicio</a></li>
+          <li><a href="about.html" class="footer-link">Sobre Nosotros</a></li>
+          <li><a href="project.html" class="footer-link">Proyectos</a></li>
+          <li><a href="shop.html" class="footer-link">Tienda</a></li>
+        </ul>
+      </div>
+
+      <div class="col-md-4">
+        <h6 class="text-uppercase mb-3">Contacto</h6>
+        <p class="small opacity-75 mb-1">creativo@elcanto.com</p>
+        <p class="small opacity-75">Madrid, España</p>
+      </div>
+
+    </div>
+
+    <div class="text-center pt-4 mt-4 border-top">
+      <p class="small mb-0 opacity-75">
+        © 2025 El Canto — Todos los derechos no están reservados
+      </p>
+    </div>
+  </div>
+</footer>
+
     <section class="container-fluid my-3 overflow-hidden">
         <div class="row g-3">
             <div class="col-6 col-md-3 gallery"><img src="media/img/7.png" class="img-fluid" alt=""></div>
