--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
       </div>
     </nav>
 
-    <section class="container mb-5 justify-content-center overflow-hidden d-flex align-items-center flex-column">
+    <section class="container mb-5 justify-content-center overflow-hidden d-flex align-items-center flex-column overflow-hidden">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
         <div class="row">
             <video class="w-100 h-auto" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
@@ -41,9 +41,9 @@
         <div class="row text-center"><h1 class="display-1">Canto</h1></div>
     </section>
 
-    <section class="container">
-        <div class="row">
-            <div class="col-10 col-md-4">
+    <section class="container overflow-hidden">
+        <div class="row py-5 my-5 justify-content-center d-flex align-items-center">
+            <div class="col-10 col-md-4" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
               <div class="flip-container g-0 align-middle">
                 <div class="flipper">
                   <img src="media/img/moneda-1.png" class="front" alt="Logo principal">
@@ -52,72 +52,70 @@
             </div>
             </div>
             <div class="col-12 col-md-8">
-                <h2>Lorem Ipsum</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo quaerat non, expedita ducimus quisquam eum, laboriosam doloribus, voluptatum inventore explicabo sed eos odit deserunt ab asperiores commodi sint necessitatibus ratione.</p>
+                <h3 class="h3 gf" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">El Canto se sitúa en el punto medio de las dos caras de la moneda</h3>
+                <p data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">El concepto de la web trata sobre crear un lugar en el que el talento se apoye de forma mútua a través de dos perfiles creativos que contrastan en su obra. Los cuales irían cambiando cada mes, apoyando a los diseñadores emergentes para que tengan un lugar donde su trabajo si que se valore, y además se complemente</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-md-8">
-                <h4>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti tempora qui, hic quas quo dicta reiciendis animi ipsam non, ad eum explicabo saepe neque in ratione labore quos a quod.</h4>
-            </div>
-            <div class="col-12 col-md-4">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil eaque pariatur officiis earum minima harum odit quis fugiat fuga? Nobis dignissimos, voluptates recusandae aliquid excepturi quisquam sit. Voluptatem, quis aliquam.</p>
-            </div>
-        </div>
-        <div class="row">
-            <h1>Artistas</h1>
+            <h1 class="display-1" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Artistas</h1>
         </div>
     </section>
 
-    <section class="container-fluid-g0">
+    <section class="container vh-100" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
         <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                  Lowkey Gaspar
-                </button>
-              </h2>
-              <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                    <div class="container">
-                        <div class="row">
-                        <div class="col-12 col-md-8">
-                            <h1 class="h1 gf">Gaspar Mayor</h1>
-                            <h3 class="h3 gf">Lorem ipsumLorem ipsum</h3>
-                            <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium fugiat tenetur, velit hic ratione ipsum officia. Exercitationem quos asperiores omnis sequi illo nam deleniti eum ea. Libero vitae culpa nesciunt.</p>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <img src="media/img/layout.avif" class="img-fluid" alt="">
-                        </div>
-                    </div>
-                    </div>
-                    
+          <div class="row">
+            <div class="col-12 col-md-6 p-2">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                    Lowkey Gaspar
+                  </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                      <div class="container">
+                          <div class="row">
+                          <div class="col-12 col-md-8">
+                              <h1 class="h1 gf">Gaspar Mayor</h1>
+                              <h3 class="h3 gf">Lorem ipsumLorem ipsum</h3>
+                              <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium fugiat tenetur, velit hic ratione ipsum officia. Exercitationem quos asperiores omnis sequi illo nam deleniti eum ea. Libero vitae culpa nesciunt.</p>
+                          </div>
+                          <div class="col-12 col-md-4">
+                              <img src="media/img/fotocv.png" class="img-fluid" alt="">
+                          </div>
+                      </div>
+                      </div>
+                      
+                  </div>
                 </div>
               </div>
             </div>
-            <div class="accordion-item">
-              <h2 class="accordion-header">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                  Héctor Asez
-                </button>
-              </h2>
-            <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-                <div class="accordion-body">
-                    <div class="container">
-                        <div class="row">
-                        <div class="col-12 col-md-8">
-                            <h1 class="h1 hf">Héctor Asesio</h1>
-                            <h3 class="h3 hf">Lorem ipsumLorem ipsum</h3>
-                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium fugiat tenetur, velit hic ratione ipsum officia. Exercitationem quos asperiores omnis sequi illo nam deleniti eum ea. Libero vitae culpa nesciunt.</p>
-                        </div>
-                        <div class="col-12 col-md-4">
-                            <img src="media/img/layout.avif" class="img-fluid" alt="">
-                        </div>
-                    </div>
-                    </div>
-                </div>
+            <div class="col-12 col-md-6 p-2">
+              <div class="accordion-item">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                    Héctor Asez
+                  </button>
+                </h2>
+              <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                  <div class="accordion-body">
+                      <div class="container">
+                          <div class="row">
+                          <div class="col-12 col-md-8">
+                              <h1 class="h1 hf">Héctor Asesio</h1>
+                              <h3 class="h3 hf">Soy un estudiante de Diseño Gráfico</h3>
+                              <p>Soy una persona creativa y curiosa, con una gran capacidad de adaptación a diferentes situaciones. Disfruto colaborando con otros en el proceso creativo. Estoy emocionado y ansioso por seguir creciendo tanto personal como profesionalmente en el mundo del diseño gráfico..</p>
+                          </div>
+                          <div class="col-12 col-md-4">
+                              <img src="media/img/imagencvhector.png" class="img-fluid" alt="">
+                          </div>
+                      </div>
+                      </div>
+                  </div>
+              </div>
+              </div>
             </div>
-            </div>
+          </div>
           </div>
     </section>
 
