--- a/index.html
+++ b/index.html
@@ -103,7 +103,14 @@
       </div>
       <div class="col-12 col-md-5">
         <h2 data-aos="fade-up" data-aos-offset="500" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Cervezas - La Virgen</h2>
-        <p data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nemo porro, rerum expedita velit delectus dolore alias nisi. Minus similique illum sequi numquam nihil nesciunt, dolorum exercitationem quibusdam magni? Quaerat, quisquam.</p>
+        <p data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Cerveceros Artesanos de Madrid es una
+          empresa productora de cerveza artesana
+          constituida por un equipo de cuatro jóve-
+          nes emprendedores, donde no ha partici-
+          pado ningún gran inversor sino el esfuerzo
+          tanto económico como humano de los
+          socios fundadores y de familiares y
+          amigos.</p>
         <a class="btn btn-primary" href="project.html" role="button" data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Ver Más</a>
         </div>
       </div>
@@ -125,7 +132,12 @@
       <div class="row">
         <div class="col-12 col-md-4">
           <h3 data-aos="fade-right" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">Cortometraje - Héctor</h3>
-          <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem quibusdam facere consequatur, sed, perferendis quaerat fugit consequuntur quod, officiis fugiat dicta illo harum totam maiores? Eius facere exercitationem blanditiis quod.</p>
+          <p data-aos="fade-right" data-aos-offset="100" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out">Se trata de una epopeya audiovisual en
+            torno a la búsqueda del hogar. Como un Ulises postmoderno, nuestro protagonista-
+            cronista-director se pasea por Suiza, Madrid y Málaga hasta aceptar sus raíces y bañarse
+            en las aguas del expatriado, de aquel con un corazón dividido pero que empieza a
+            aceptarse y a disfrutarlo. Una road movie, hermosamente fotografiada, montada y
+            narrada (mucho mejor ahora la voz) y que nos llega al alma…</p>
         </div>
         <div class="col-12 col-md-8" data-aos="fade-left" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
