--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     <section class="container mb-5 justify-content-center overflow-hidden d-flex align-items-center flex-column overflow-hidden">
         <div class="row text-center"><h1 class="display-1">El</h1></div>
         <div class="row">
-            <video class="w-100 h-auto" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
+            <video class="vh-50" autoplay muted loop data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"> 
               <source src="media/vid/video moneda 2.mp4" type="video/mp4"> 
             </video>
         </div>
