Textos index, botones para todos los proyectos index, terminar shop con animaciones y texto de la tienda

--- a/index.html
+++ b/index.html
@@ -68,15 +68,15 @@
         </div>
         <div class="col-12 col-md-8 col-lg-3">
           <div class="row" data-aos="fade-right" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
-            <h2 class="h2 gf" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem</h2>
+            <h2 class="h2 gf" data-aos="fade-up" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">Sofía de Hungría - Yeico X Toni</h2>
             <p class="text-start">
-              El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos.  Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda.
-            </p>
+           Este videoclip narra una historia paralela en la que los protagonistas forman parte de tres shows televisivos diferentes durante el videoclip. En el primero, actúan como presentadores de televisión y cuentan el problema de la vivienda en España, y hacen un reportaje en el que al final acaban resolviendo la situación. De ahí, pasan a un programa de cocina y, finalmente, por un programa de videnses, por así decirlo.            </p>
           </div>
           <div class="row mt-5" data-aos="fade-left" data-aos-offset="100" data-aos-delay="50" data-aos-duration="500" data-aos-easing="ease-in-out">
             <p class="text-end align-bottom" >
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Suscipit nulla quaerat vero voluptate facere dignissimos expedita recusandae quasi neque quod libero, dicta quis inventore, enim magni velit ipsam iusto voluptatibus?
-            </p>
+           En las tres escenas se mantiene coherencia y sentido, destacando el sentido del humor por encima de todo, y jugando con una estética antigua y sucia que hace que destaque mucho la canción al ser un tema mucho más suave.            </p>
+                   <a class="btn btn-primary" href="https://www.youtube.com/watch?v=uPg6XbFCINw" role="button" data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Ver Más</a>
+
           </div>
         </div>
         <div class="col-12 col-md-8 col-lg-6 justify-content-center mx-auto">
@@ -138,7 +138,9 @@
             en las aguas del expatriado, de aquel con un corazón dividido pero que empieza a
             aceptarse y a disfrutarlo. Una road movie, hermosamente fotografiada, montada y
             narrada (mucho mejor ahora la voz) y que nos llega al alma…</p>
-        </div>
+               <a class="btn btn-primary" href="https://www.youtube.com/watch?v=fMcZcx9MfFE&t=11s" role="button" data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Ver Más</a>
+
+          </div>
         <div class="col-12 col-md-8" data-aos="fade-left" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">
           <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -185,16 +187,25 @@
         </div>
         <div class="col-12 col-md-6">
           <div class="row">
-            <p data-aos="fade-left" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio itaque fugit hic, unde cupiditate sint, rem autem voluptatum alias consequuntur soluta. Dolore mollitia sequi autem error animi non accusamus laboriosam?</p>
+             <div class="col-12 col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><p ><strong> "NON-ANIMAL ANIMAL SEASON" </strong></p></div>
+
+            <p data-aos="fade-left" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out">SOLÍAMOS PENSAR QUE LA ALTA MODA SIGNIFICABA PODER.
+            EL PODER MATA.
+            Generaciones y generaciones han intentado alcanzar los mejores resultados sacrificando vidas por el camino. Crear es libre, así que no aumentes el daño creando.
+            Toda esta colección está hecha con materiales sostenibles, incluyendo el propio packaging de producción.</p>
           </div>
           <div class="row">
-            <div class="col-12 col-md-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><p >Lorem ipsum</p></div>
             <div class="col-10 col-md-6 justify-content-center mx-auto my-3" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><img src="media/img/BEANIE.png" class="img-fluid" alt=""></div>
           </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-12 col-sm-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt architecto placeat officia alias quaerat inventore, nostrum praesentium perspiciatis ex dignissimos unde aliquam iste consequuntur possimus nam et doloribus, quisquam laudantium.</p></div>
+        <div class="col-12 col-sm-6" data-aos="fade-up" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><p>En esta colección, cada pieza lleva una huella que no proviene de ningún animal, pero sí de algo igual de vivo: la contradicción humana. NON ANIMAL SEASON no busca imitar pieles ni reproducir texturas que no nos pertenecen; busca recordar que la creación también puede ser un refugio, un acto de respeto y una forma de dejar de replicar daños heredados.
+
+                Aquí, los materiales se eligen no por lujo, sino por coherencia. Las prendas nacen desde la intención de hacer menos ruido al existir, de ser más ligeras, de no cargar con un sufrimiento que no vemos pero sabemos que existe. No es una revolución a gritos; es un gesto silencioso, casi íntimo. Una forma de demostrar que se puede diseñar sin repetir historia.</p>
+                <a class="btn btn-primary" href="project.html" role="button" data-aos="fade-up" data-aos-offset="500" data-aos-delay="150" data-aos-duration="500" data-aos-easing="ease-in-out">Ver Más</a>
+
+        </div>
         <div class="col-12 col-sm-6" data-aos="fade-down" data-aos-offset="100" data-aos-delay="0" data-aos-duration="500" data-aos-easing="ease-in-out"><img src="media/img/Free Packaging Meat Tray Mockup.png" class="img-fluid" alt=""></div>
       </div>
     </section>
