--- a/about.html
+++ b/about.html
@@ -116,80 +116,29 @@
               </div>
             </div>
           </div>
+          <div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <p class="fs-5">
+        <strong>En El Canto, nada permanece quieto.</strong><br>
+        Cada mes se suma un nuevo artista, una nueva mirada, una nueva forma de entender lo visual.
+        El proyecto crece como un archivo vivo: las voces cambian, las estéticas se mezclan y cada incorporación abre una etapa distinta.
+        No buscamos una línea única, sino un diálogo continuo entre estilos que chocan, se contradicen y se complementan.
+        <br><br>
+        Cada mes, un artista distinto toma su espacio y deja su marca.  
+        Cada mes, El Canto cambia de ritmo.
+        <br><br>
+        Esto no es una exposición fija; es un movimiento constante.  
+        Un sitio donde siempre habrá algo nuevo que descubrir.
+      </p>
+    </div>
+  </div>
+</div>
+
           </div>
     </section>
 
-    <footer class="footer-enhanced py-5 mt-5" data-aos="fade-up">
- <div class="container">
-   <div class="row gy-4">
-
-
-     <div class="col-md-3">
-       <h5 class="text-uppercase mb-3">El Canto</h5>
-       <p class="small opacity-75">
-         Un proyecto donde dos perfiles creativos opuestos se encuentran para crear algo único.
-       </p>
-     </div>
-
-
-     <div class="col-md-3">
-       <h6 class="text-uppercase mb-3">Enlaces</h6>
-       <ul class="list-unstyled small">
-         <li><a href="index.html" class="footer-link">Inicio</a></li>
-         <li><a href="about.html" class="footer-link">Sobre Nosotros</a></li>
-         <li><a href="project.html" class="footer-link">Proyectos</a></li>
-         <li><a href="shop.html" class="footer-link">Tienda</a></li>
-       </ul>
-     </div>
-
-
-     <div class="col-md-3">
-       <h6 class="text-uppercase mb-3">Contacto</h6>
-       <p class="small opacity-75 mb-1">info@elcanto.com</p>
-       <p class="small opacity-75">Madrid, España</p>
-     </div>
-
-
-     <div class="col-md-3">
-       <h6 class="text-uppercase mb-3">Newsletter</h6>
-
-
-       <form>
-         <div class="mb-3">
-           <label for="exampleInputEmail1" class="form-label small">Correo electrónico</label>
-           <input type="email" class="form-control form-control-sm" id="exampleInputEmail1">
-         </div>
-
-
-         <div class="mb-3">
-           <label for="exampleInputPassword1" class="form-label small">Contraseña</label>
-           <input type="password" class="form-control form-control-sm" id="exampleInputPassword1">
-         </div>
-
-
-         <div class="mb-3 form-check">
-           <input type="checkbox" class="form-check-input" id="exampleCheck1">
-           <label class="form-check-label small" for="exampleCheck1">Verificado</label>
-         </div>
-
-
-         <button type="submit" class="btn btn-primary btn-sm w-100">Enviar</button>
-       </form>
-
-
-     </div>
-
-
-   </div>
-
-
-   <div class="text-center pt-4 mt-4 border-top">
-     <p class="small mb-0 opacity-75">
-       © 2025 El Canto — Todos los derechos reservados
-     </p>
-   </div>
- </div>
-</footer>
+    
 
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/script.js"></script>
