--- a/shop.html
+++ b/shop.html
@@ -34,12 +34,6 @@
    </nav>
 
 
-   <section class="container overflow-hidden">
-       <div class="row">
-           <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
-       </div>
-   </section>
-
 
 <section class="shop-hero-minimal py-5 overflow-hidden">
  <div class="container text-center">
@@ -158,8 +152,26 @@
      </div>
    </div>
  </div>
+
 </section>
 
+<section class="container overflow-hidden">
+    <div class="row justify-content-center my-5" data-aos="fade-up" data-aos-duration="900">
+    <div class="col-md-8">
+      <p class="fs-5 shop-intro">
+        <strong>La tienda de El Canto no existe solo para vender.</strong><br>
+        Cada producto funciona como una pieza representativa, una extensión física del trabajo de los artistas que participan en esta edición. Más que objetos, son fragmentos de su universo creativo, pensados para acompañarte y, al mismo tiempo, apoyar directamente a quienes los diseñan.
+        <br><br>
+        Aquí, cada compra se convierte en un gesto: una forma de impulsar el talento que forma parte de El Canto y de dar visibilidad a estilos que merecen ser vistos, tocados y coleccionados.
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
+  </div>
+
+
+</section>
 
   
 <footer class="footer-enhanced py-5 mt-5" data-aos="fade-up">
