--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>Sobre Nosotros</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
     <!-- Tipos -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,8 +79,8 @@
                           <div class="row">
                           <div class="col-12 col-md-8">
                               <h1 class="h1 gf">Gaspar Mayor</h1>
-                              <h3 class="h3 gf">Lorem ipsumLorem ipsum</h3>
-                              <p class="p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Praesentium fugiat tenetur, velit hic ratione ipsum officia. Exercitationem quos asperiores omnis sequi illo nam deleniti eum ea. Libero vitae culpa nesciunt.</p>
+                              <h3 class="h3 gf">Soy un diseñador estúpido</h3>
+                              <p class="p">Si tienes un problema creativo, como por ejemplo la dirección creativa de tu próximo álbum, que te grabe el cumpleaños de tu tía o casi cualquier cosa que se te ocurre mientras me pagues como quieras. </p>
                           </div>
                           <div class="col-12 col-md-4">
                               <img src="media/img/fotocv.png" class="img-fluid" alt="">
