--- a/index.html
+++ b/index.html
@@ -31,21 +31,33 @@
       </div>
     </nav>
   
-    <div class="container justify-content-center overflow-hidden vh-100 d-flex align-items-center" >
-        <div class="row text-center mx-auto">
-            <div class="col">
-                <h1 class="display-1" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="0" data-aos-duration="400" data-aos-easing="ease-in-out">- El canto -</h1>
-                <div class="row justify-content-center">
-                    <div class="col-5 col-lg-2 my-2 text-end" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out"><h5 class="h5 gf">Lowkey Gaspar</h5></div>
-                    <div class="col-1 my-2 d-flex align-items-center justify-content-center" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out"><h5 class="h5">X</h5></div>
-                    <div class="col-5 col-lg-2 my-2 text-start" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out"><h5 class="h5 hf">Héctor Asesio</h5></div>
-                </div>
-                <div class="row justify-content-center">
-                  <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="100" data-aos-duration="700" data-aos-easing="ease-in-out"> <p class="text cp">              El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos.  Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda. </p>
-                  </div></div>
-            </div>
+    <div class="container justify-content-center overflow-hidden vh-100 d-flex align-items-center hero-knights" id="hero-el-canto">
+  <div class="row text-center mx-auto hero-text-wrapper">
+    <div class="col">
+      <h1 class="display-1" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="0" data-aos-duration="400" data-aos-easing="ease-in-out">- El canto -</h1>
+      <div class="row justify-content-center">
+        <div class="col-5 col-lg-2 my-2 text-end" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out"><h5 class="h5 gf">Lowkey Gaspar</h5></div>
+        <div class="col-1 my-2 d-flex align-items-center justify-content-center" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out"><h5 class="h5">X</h5></div>
+        <div class="col-5 col-lg-2 my-2 text-start" data-aos="zoom-in" data-aos-offset="0" data-aos-delay="100" data-aos-duration="500" data-aos-easing="ease-in-out"><h5 class="h5 hf">Héctor Asesio</h5></div>
+      </div>
+      <div class="row justify-content-center">
+        <div class="col-8 col-md-6" data-aos="zoom-in" data-aos-offset="100" data-aos-delay="100" data-aos-duration="700" data-aos-easing="ease-in-out">
+          <p class="text cp">
+            El Canto nace del encuentro entre dos mentes que miran el mundo desde perspectivas similares pero con enfoques opuestos. Gracias a ese contraste, del choque de estéticas y formas de sentir, es donde surge la verdadera creatividad. El canto de la moneda.
+          </p>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- Caballeros que se separan -->
+  <img src="media/img/CABALELRO2.png" alt="Caballero izquierdo"
+       class="hero-knight hero-knight-left">
+  <img src="media/img/CABALLERO1.png" alt="Caballero derecho"
+       class="hero-knight hero-knight-right">
+</div>
+
+
 
     <Section class="container-fluid g-0 mb-5 overflow-hidden" >
       <div class="row">
