--- a/shop.html
+++ b/shop.html
@@ -6,6 +6,8 @@
    <title>Shop</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
 
 
    <!-- Tipos -->
@@ -157,18 +159,16 @@
 
 <section class="container overflow-hidden">
     <div class="row justify-content-center my-5" data-aos="fade-up" data-aos-duration="900">
-    <div class="col-md-8">
-      <p class="fs-5 shop-intro">
-        <strong>La tienda de El Canto no existe solo para vender.</strong><br>
-        Cada producto funciona como una pieza representativa, una extensión física del trabajo de los artistas que participan en esta edición. Más que objetos, son fragmentos de su universo creativo, pensados para acompañarte y, al mismo tiempo, apoyar directamente a quienes los diseñan.
-        <br><br>
-        Aquí, cada compra se convierte en un gesto: una forma de impulsar el talento que forma parte de El Canto y de dar visibilidad a estilos que merecen ser vistos, tocados y coleccionados.
-      </p>
-    </div>
+    <div class="col-md-8" data-aos="fade-up" data-aos-duration="900">
+  <p class="fs-5 shop-intro">
+    <strong>La tienda de El Canto no existe solo para vender.</strong><br>
+    Cada producto funciona como una pieza representativa, una extensión física del trabajo de los artistas que participan en esta edición. Más que objetos, son fragmentos de su universo creativo, pensados para acompañarte y, al mismo tiempo, apoyar directamente a quienes los diseñan.
+    <br><br>
+    Aquí, cada compra se convierte en un gesto: una forma de impulsar el talento que forma parte de El Canto y de dar visibilidad a estilos que merecen ser vistos, tocados y coleccionados.
+  </p>
+</div>
   </div>
-  <div class="row">
-    <img src="media/img/layout horizontal.jpg" class="img-fluid" alt="">
-  </div>
+
 
 
 </section>
